# golden

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
golden/: __init__.py  golden_embeddings.py  golden_faiss_retriever.py  golden_retriever.py  utils.py
tests/: test.py  test_detect_batch.py  test_embedding_zoo.py  test_embeddings.py  test_embeddings_from_documents.py  test_retriever_simple.py
